--- a/index.html
+++ b/index.html
@@ -19,11 +19,13 @@
             <figure class="effect-julia">
                 <img src="images/Background.png" alt="eggs" />
                 <figcaption>
-                    <h2>Passionate <span>Julia</span></h2>
+                    <h2>Wesołego Alleluja</h2>
                     <div>
-                        <p>Julia dances in the deep dark</p>
-                        <p>She loves the smell of the ocean</p>
-                        <p>And dives into the morning light</p>
+                        <p>Jaj przepięknie malowanych,</p>
+                        <p>Świąt słonecznie roześmianych,</p>
+                        <p>W poniedziałek dużo wody,</p>
+                        <p>Zdrowia, szczęścia oraz zgody !</p>
+                        <p>Życzą Szarowscy z córkami</p>
                     </div>
                     <a href="#">View more</a>
                 </figcaption>
