add style for content

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div class="content">
         <div class="grid">
             <figure class="effect-julia">
-                <img src="images/Background.png" alt="eggs" />
+                <img src="images/Background 2.png" alt="eggs" />
                 <figcaption>
                     <h2>Wesołego Alleluja</h2>
                     <div>
