--- a/index.html
+++ b/index.html
@@ -8,16 +8,15 @@
     <link rel="stylesheet" href="style-julia.css">
 
     <!-- Fonts -->
-    <link href="https://fonts.googleapis.com/css?family=Raleway&display=swap" rel="stylesheet">
-
+    <link href="https://fonts.googleapis.com/css2?family=Lobster+Two:ital@1&display=swap" rel="stylesheet">
 </head>
 
 <body>
 
     <div class="content">
         <div class="grid">
-            <figure class="effect-julia">
-                <img src="images/eggs1.png" alt="eggs" />
+            <figure id="logo" class="effect-julia">
+                <img src="images/eggs.png" alt="eggs" />
                 <figcaption>
                     <h2>Wesołego Alleluja</h2>
                     <div>
@@ -33,7 +32,34 @@
         </div>
     </div>
 
+    <script>
 
+        // This changes everything
+        "use strict";
+
+        // retrieve the element
+        var element = document.getElementById("logo");
+
+        // reset the transition by...
+        element.addEventListener("click", function (e) {
+            e.preventDefault;
+
+            // -> removing the class
+            element.classList.remove("effect-julia");
+
+            // -> triggering reflow /* The actual magic */
+            // without this it wouldn't work. Try uncommenting the line and the transition won't be retriggered.
+            // This was, from the original tutorial, will no work in strict mode. Thanks Felis Phasma! The next uncommented line is the fix.
+            // element.offsetWidth = element.offsetWidth;
+
+            void element.offsetWidth;
+
+            // -> and re-adding the class
+            element.classList.add("effect-julia");
+        }, false);
+
+
+    </script>
 
 </body>
 
